--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-screen">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,28 +24,59 @@
         color: hsl(228, 45%, 44%);
       }
     </style>
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./input.css" />
   </head>
-  <body class="bg-gray-100">
-    <main>
+  <body class="w-full min-h-screen px-5 bg-mobile font-[Inconsolata] pt-8">
+    <main class="flex items-center flex-col">
       <!-- Form starts -->
-      <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
-      <p>Secure your spot at next year's biggest coding conference.</p>
+      <img src="./assets/images/logo-full.svg" class="w-[10rem] mb-8" />
+      <h1 class="text-neutral font-extrabold mb-4 text-center">
+        Your Journey to Coding Conf 2025 Starts Here!
+      </h1>
+      <p class="text-gray text-center text-[1.2rem] mb-10">
+        Secure your spot at next year's biggest coding conference.
+      </p>
+      <div class="">
+        <p class="text-neutral text-[1.2rem] mb-2">Upload Avatar</p>
 
-      <p>Upload Avatar</p>
-      <p>Drag and drop or click to upload</p>
-      <p>Upload your photo (JPG or PNG, max size: 500KB).</p>
-      <p>Full Name</p>
+        <div
+          class="border-[hsl(245,15%,58%)] border-dashed border-2 px-5 py-5 w-full gap-3 bg-[hsl(245,19%,35%)]/30 rounded-xl flex flex-col items-center"
+        >
+          <img
+            src="./assets/images/icon-upload.svg"
+            class="border-0 bg-[hsl(245,19%,35%)]/50 p-2 rounded-xl"
+          />
+          <p class="text-gray text-[1rem]">Drag and drop or click to upload</p>
+        </div>
+        <p class="text-gray text-[11px] flex gap-1.5 mt-3 mb-5">
+          <img src="./assets/images/icon-info.svg" />
 
-      <input />
-      <p>Email Address</p>
+          Upload your photo (JPG or PNG, max size: 500KB).
+        </p>
 
-      <input type="email" placeholder="    example@email.com " />
-      <p>GitHub Username</p>
+        <p class="text-neutral text-[1.2rem] mb-2">Full Name</p>
+        <input type="text" class="input-field" />
 
-      <input type="text" placeholder="@yourusername" />
+        <p class="text-neutral text-[1.2rem] mb-2">Email Address</p>
+        <input
+          type="email"
+          placeholder="example@email.com "
+          class="input-field"
+        />
 
-      <button>Generate My Ticket</button>
+        <p class="text-neutral text-[1.2rem] mb-2">GitHub Username</p>
+        <input type="text" placeholder="@yourusername" class="input-field" />
+        <button
+          class="bg-[hsl(7,88%,67%)] w-full px-[2rem] py-3 rounded-xl font-bold text-lg text-[hsl(249,21%,12%)]"
+        >
+          Generate My Ticket
+        </button>
+      </div>
+      <!-- 
+      <div class="mt-5"></div>
+      <div class=""></div>
+      <div class=""></div> -->
 
       <!-- Form ends -->
 
