--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script src="http://cdn.jsdelivr.net/g/filesaver.js"></script>
+    <script src="https://cdn.jsdelivr.net/g/filesaver.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
